--- a/package.json
+++ b/package.json
@@ -7,19 +7,26 @@
   "author": "Aaron Edwards <edwards.aaronmark@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "build": "tsc",
+    "test": "jest"
   },
   "dependencies": {
     "@types/node": "^14.14.10",
     "typescript": "^4.1.2"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.19",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "eslint": "^7.14.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
-    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "fast-check": "^2.10.0",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
     "ts-proto": "^1.39.0"
   }
 }
