--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/node": "^14.14.10",
+    "protobufjs": "^6.10.2",
     "typescript": "^4.1.2"
   },
   "devDependencies": {
