--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@types/node": "^14.14.10",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "protobufjs": "^6.10.2"
   },
   "devDependencies": {
     "@types/jest": "^26.0.19",
