--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.1.2"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.9",
     "@types/jest": "^26.0.19",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "eslint": "^7.14.0",
@@ -26,6 +27,8 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
     "fast-check": "^2.10.0",
+    "fs-extra": "^9.1.0",
+    "handlebars": "^4.7.7",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
